--- a/index.html
+++ b/index.html
@@ -10,4 +10,12 @@
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
+
+  <script type="importmap">
+    {
+      "imports": {
+        "vue": "/node_modules/vue/dist/vue.esm-browser.js"
+      }
+    }
+  </script>
 </html>
